--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "dependencies": {
     "commander": "^12.1.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jest": "^28.5.0",
+    "globals": "^15.1.0",
+    "jest": "^29.7.0"
   }
 }
